// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pinned FocusPicker matches snapshot 1`] = `
<div
  className="Main"
>
  <span
    className="Label"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="presentation"
  >
    <span
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
      title="Unpin from Focus"
    >
      <img
        alt="Unpin from Focus"
        className="CenterIcon"
        src="/svgs/pin-2-dark-filled.svg"
        style={
          Object {
            "height": "1em",
            "width": "1em",
          }
        }
      />
    </span>
  </span>
</div>
`;

exports[`Unpinned FocusPicker matches snapshot 1`] = `
<div
  className="Main"
>
  <span
    className="Label"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="presentation"
  >
    <span
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
      title="Pin to Focus"
    >
      <img
        alt="Pin to Focus"
        className="CenterIcon"
        src="/svgs/pin-2-dark-outline.svg"
        style={
          Object {
            "height": "1em",
            "width": "1em",
          }
        }
      />
    </span>
  </span>
</div>
`;
